src/main/java/com/example/java17/workshop/exceptionhandling/controller/advice/error/GeneralError.java
package com.example.java17.workshop.exceptionhandling.controller.advice.error;

public sealed interface GeneralError permits ReportError, UserError, ServiceError {

}